--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -50,4 +50,17 @@
         app:layout_constraintTop_toTopOf="@+id/home_bar"
         app:layout_constraintVertical_bias="0.657" />
 
+    <EditText
+        android:id="@+id/indirizzo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Indirizzo "
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/home_bar"
+        app:layout_constraintVertical_bias="0.082" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
