da collegare con back end

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:onClick="loginPartner"
+        android:onClick="iAmPartner"
         android:text="Registra la tua attività"
         android:textColor="@android:color/black"
         android:textSize="18sp"
