--- a/app/src/main/res/layout/activity_new_auto.xml
+++ b/app/src/main/res/layout/activity_new_auto.xml
@@ -12,7 +12,7 @@
         style="@style/MyTheme.ActionBar.TitleTextStyle"
         layout="@layout/home_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         tools:layout_editor_absoluteX="-116dp"
         tools:layout_editor_absoluteY="1dp"></include>
 
