--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,6 +8,14 @@
     tools:context=".RegisterActivity"
     tools:ignore="DuplicateIds">
 
+    <include
+        android:id="@+id/home_bar"
+        layout="@layout/home_bar"
+        android:layout_width="414dp"
+        android:layout_height="64dp"
+        tools:layout_editor_absoluteX="-2dp"
+        tools:layout_editor_absoluteY="1dp"></include>
+
     <EditText
         android:id="@+id/et_nome"
         android:layout_width="wrap_content"
@@ -69,9 +77,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorActionBar"
         android:nestedScrollingEnabled="true"
         android:onClick="registrati"
-        android:text="Invia"
+        android:text="Registrati"
+        android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.346"
@@ -82,10 +92,11 @@
 
     <TextView
         android:id="@+id/te_login"
-        android:layout_width="63dp"
-        android:layout_height="32dp"
+        android:layout_width="211dp"
+        android:layout_height="40dp"
         android:onClick="login"
-        android:text="Login"
+        android:text="Già registrato? Login qui"
+        android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +116,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.236"
-        app:srcCompat="@drawable/images" />
+        app:srcCompat="@drawable/user_single" />
+
+    <TextView
+        android:id="@+id/tRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registrati"
+        android:textColor="@color/colorBackground"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/home_bar"
+        app:layout_constraintEnd_toEndOf="@+id/home_bar"
+        app:layout_constraintStart_toStartOf="@+id/home_bar"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
