--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBackground">#9CC6ED</color>
     <color name="colorBackgroundPartner">#F1C5C2</color>
     <color name="colorActionBarPartner">#8C3A34</color>
+    <color name="colorWelcome">#FFFFFB</color>
 </resources>
