--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         android:layout_width="409dp"
         android:layout_height="137dp"
         android:clickable="true"
-        android:onClick="getMap"
+        android:onClick="manageMyCoupons"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
